Fixed z-index on nested table headers.

--- a/src/components/table/head/style.css
+++ b/src/components/table/head/style.css
@@ -4,7 +4,7 @@
 	grid-template-columns: subgrid;
 	top: 0;
 	position: sticky;
-	z-index: 2;
+	z-index: 3;
 	--smoothly-color: var(--smoothly-table-header-background);
 	--smoothly-color-contrast: var(--smoothly-table-header-foreground);
 	background-color: rgb(var(--smoothly-table-header-background));
